<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expense Tracker</string>

    <string name="action_settings">Settings</string>
    <string name="date_text">* Date</string>
    <string name="type_text">* Type</string>
    <string name="amount_text">* Amount</string>
    <string name="category_text">* Category</string>
    <string name="by_text">* By</string>
    <string name="row_num_text">Row Num</string>
    <string name="description_text">Description</string>
    <string name="add_button">Add</string>
    <string name="pick_date_button">Pick</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>

    <string name="number_days_text">Number of days</string>
    <string name="choose_recent_button">Submit</string>

    <string name="pref_spreadsheet_id">Spreadsheet ID</string>
    <string name="pref_spreadsheet_id_default">16M3lWbAGhjtm-NVCLgXSLoi6ZMqavpbfjWxVaqRzmsI</string>
    <string name="pref_categories_name">Categories Sheet Name</string>
    <string name="pref_categories_name_default">Categories</string>

    <string name="dialog_error">Error</string>
    <string name="dialog_ok">OK</string>

    <string name="needs_permission">This app needs to access your Google account (via Contacts).</string>
    <string name="error_connect_spreadsheet">An error has occurred talking to the spreadsheet</string>
    <string name="error_required_google_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="error_no_network">No network connection.</string>
    <string name="error_saving_offline">No network connection, so saving offline.</string>
    <string name="error_amount_positive">Amount has to be a number greater than 0.</string>
    <string name="error_category_empty">New category cannot be empty.</string>
    <string name="category_added">Category added!</string>
    <string name="expense_added">Income/Expense added!</string>
    <string name="loading">Loading...</string>
    <string name="default_recent_days">10</string>
</resources>
